@@ -1,2 +1,0 @@
-version = '25'
-last_modified_timestamp = '2010-08-10 16:06:09 IST'
