@@ -1,6 +1,5 @@
 from django.contrib.auth import logout
 from django.shortcuts import redirect
-from django.contrib import messages
 from django.conf import settings
 from django.contrib.auth.decorators import login_required
 
